style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body,
html {
  overflow: hidden;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

.webgl {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

nav {
  color: white;
  z-index: 2;
  position: relative;
  padding: 4rem 8rem;
  display: flex;
  justify-content: space-between;
}

nav ul {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 2rem;
}

.title {
  color: white;
  position: absolute;
  text-align: center;
  z-index: 2;
  font-size: 3rem;
  left: 50%;
  top: 80%;
  transform: translate(-50%, -20%);
}


@media (max-width: 800px) {
  .title {
    font-size: 2rem;
  }

  nav {
    position: relative;
    padding: 1rem 3rem;
  }
}

